--- a/module/Application/view/application/index/conduct.phtml
+++ b/module/Application/view/application/index/conduct.phtml
@@ -4,10 +4,10 @@
 <div id="block-mine">
     <p style="text-align: justify;">
         The SunshinePHP Developer Conference is dedicated to providing a harassment-free 
-        conference experience for everyone, regardless of gender, sexual orientation, 
-        disability, physical appearance, race, or religion. Harassment of conference
-        any conference participants in any form will not be tolerated.  This extends to
-        sexual language and/or imagery which is not appropriate for any conference venue,
+        conference experience for everyone, regardless of gender, gender identity and
+        expression, sexual orientation, disability, physical appearance, race, or religion. 
+        Harassment of conference any conference participants in any form will not be tolerated.
+        This extends to sexual language and/or imagery which is not appropriate for any conference venue,
         including talks. Conference participants violating these rules may be sanctioned
         or expelled from the conference without a refund at the discretion of conference
         organizers.<br /><br />
